# reproducing-PlanT

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
configs/: collect.yaml  collector.yaml  plant.yaml  simulate.yaml  train.yaml
plant/carla/: agent.py  collector.py  controller.py  global_route_planner.py
plant/data/: collate.py  dataset.py  features.py  storage.py
plant/model/: decoder.py  embedding.py  encoder.py  head.py  plant.py
plant/utils/: geometry.py  route.py  visualizer.py
scripts/: collect.py  evaluate.py  simulate.py  train.py
tests/: test_dataset_smoke.py
